[stno-10] added method for "shortbysalary"